2002-08-28  Keith Seitz  <keiths@redhat.com>

	* gdbmi.texinfo: Document the interpreter-exec command.

2002-08-21  Keith Seitz  <keiths@redhat.com>

	* mi-events.c (mi_target_changed): Renamed from mi_register_update.
	* mi.h (mi_target_changed): Ditto.
	* mi-interp.c (mi_event_handlers): Ditto.

2002-08-19  Keith Seitz  <keiths@redhat.com>

	* mi-cmd-stack.c (mi_cmd_stack_select_frame): Revert 2002-07-25
	change. stack.c now handles it properly.

2002-08-13  Keith Seitz  <keiths@redhat.com>

	* mi-interp.c (mi_cmd_interpreter_set): Remove. We're not going
	to allow this.
	* mi-cmds.c: Remove "interpreter-set" command.
	* mi-cmds.h (mi_cmd_interpreter_set): Remove.

2002-08-09  Keith Seitz  <keiths@redhat.com>

	* gdbmi.texinfo: Document selected-frame-changed, register-update,
	and context-changed events.

2002-08-09  Keith Seitz  <keiths@redhat.com>

	* gdbmi.texinfo (-data-list-register-names): Document "-numbers"
	option.
	* mi-main.c (mi_cmd_data_list_register_names): Add "-numbers"
	option.

2002-08-09  Keith Seitz  <keiths@redhat.com>

        * mi-interp.c (mi_event_handlers): Add context_changed event
        handler.
	(mi_command_loop): Remove big block of code repeated in 
	mi_interpreter_resume. I don't think this is needed.
        (mi_insert_notify_hooks): Remove context_hook.
        (mi_remove_notify_hooks): Likewise.
        * mi-events.c (mi_context_changed): New function.
        * mi.h (mi_context_changed): Add declaration.

2002-07-25  Keith Seitz  <keiths@redhat.com>

	* mi-interp.c (mi_event_handlers): Add selected_frame_level_changed
	handler.
	(mi_insert_notify_hooks): Remove breakpoint hooks and frame
	changed hook.
	(mi_remove_notify_hooks): Likewise.
	* mi-events.c (mi_selected_frame_level_changed): New function.
	(mi_interp_frame_changed_hook): Remove.
	(mi_interp_create_breakpoint_hook): Remove.
	(mi_interp_modify_breakpoint_hook): Remove.
	(mi_interp_delete_breakpoint_hook): Remove.