@@ -1,5 +1,10 @@
 2002-08-28  Keith Seitz  <keiths@redhat.com>
 
+	* mi-interp.c (_initialize_mi_interp): Add exec_proc.
+	(mi_interpreter_exec): New function. MI's exec_proc.
+
+2002-08-28  Keith Seitz  <keiths@redhat.com>
+
 	* gdbmi.texinfo: Document the interpreter-exec command.
 
 2002-08-21  Keith Seitz  <keiths@redhat.com>
